--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "homepage": "https://github.com/anasmez/currency-bot-converter#readme",
   "dependencies": {
     "discord.js": "14.5.0",
-    "dotenv": "16.0.2"
+    "dotenv": "16.0.2",
+    "node-fetch": "2.6.6"
   },
   "devDependencies": {
     "eslint": "8.24.0"
